compiler/flux-typecheck/src/snapshots/flux_typecheck__tests__parse_basic_backwards_dependency.snap
---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
main
--------------------
x -> Ref(1)
y -> SInt(16)

