compiler/flux-typecheck/src/snapshots/flux_typecheck__tests__parse_basic_dependency.snap
---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
main
--------------------
x -> SInt(16)
y -> Ref(2)

