compiler/flux-typecheck/src/snapshots/flux_typecheck__tests__parse_function_call_type_propagation.snap
---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
foo
--------------------
main
--------------------
x -> SInt(13)
y -> SInt(13)

