compiler/flux-typecheck/src/snapshots/flux_typecheck__tests__parse_function_call_type_propogation.snap
---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
foo
--------------------
main
--------------------
x -> Ref(3)
y -> SInt(13)

