compiler/flux-typecheck/src/snapshots/flux_typecheck__tests__parse_int_defaults_u32.snap
---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
main
--------------------
x -> Int

